--- a/gift_shop/public/css/superadmin.css
+++ b/gift_shop/public/css/superadmin.css
@@ -10,7 +10,7 @@
 }
 
 :root {
-    --blue: #9d8757;
+    --blue: black;
     --white: #fff;
     --gray: #f5f5f5;
     --black1: #222;
@@ -432,7 +432,7 @@ h1, h3{
 }
 
 .container-table::-webkit-scrollbar-thumb {
-    background-color: #9D8757; /* Scrollbar thumb color */
+    background-color: black; /* Scrollbar thumb color */
     border-radius: 4px; /* Optional: rounded edges */
 }
 
@@ -442,7 +442,7 @@ h1, h3{
 }
 
 .footer-table{
-    background-color: #9d8757;
+    background-color: black;
 
 }
 .table {
@@ -454,7 +454,7 @@ border-radius: 40px;
 }
 
 thead {
-    background-color: #9d8757;
+    background-color: black;
     color: white;
 }
 .table th{
@@ -666,7 +666,7 @@ a.btn-Green:hover {
 
 /* Style for focus state on input fields */
 .form-control:focus {
-    border-color: #9d8757;
+    border-color: black;
     outline: none;
 }
 
@@ -677,7 +677,7 @@ a.btn-Green:hover {
     font-size: 16px;
     font-weight: bold;
     color: #fff;
-    background-color: #9d8757;
+    background-color: black;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -818,7 +818,7 @@ h2{
 .product-btn-green { background-color: #28a745; }
 .product-cards { display: flex; flex-wrap: wrap; gap: 5px; width: 100% ; height: 200px;}
 .product-card {width: 22%; border: 1px solid #ddd; border-radius: 8px; overflow: hidden;margin-left: 2% ;cursor: pointer;box-shadow: 5px 5px 12px black;}
-.product-card:hover { background-color: #9d8757;color: white; border: 1px solid #9d8757; border-radius: 8px; overflow: hidden;margin-left: 2% ;cursor: pointer;box-shadow: 5px 5px 12px black;}
+.product-card:hover { background-color: black;color: white; border: 1px solid black; border-radius: 8px; overflow: hidden;margin-left: 2% ;cursor: pointer;box-shadow: 5px 5px 12px black;}
 .product-card img { width: 100%; height: 80%; object-fit: cover; }
 .product-card a{height: 330px ; width: 21%; position: absolute;z-index: 1;margin-top: -310px; opacity: 0; }
 .product-card-title { padding: 5%; font-size: 1.2rem; text-align: center; }
